// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkChipGroupSingleSelect should render correctly with type = rail 1`] = `
<DocumentFragment>
  <div
    class="bpk-chip-group-container"
  >
    <div
      class="bpk-chip-group-nudger bpk-chip-group-nudger--leading bpk-chip-group-nudger--hidden"
    >
      <button
        class="bpk-button bpk-button--icon-only bpk-button--secondary"
        disabled=""
        title="Scroll back"
        type="button"
      >
        <span
          style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
        >
          <svg
            aria-hidden="true"
            style="width: 1rem; height: 1rem;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M21 12a1.5 1.5 0 01-1.5 1.5H8.121l4.94 4.94a1.5 1.5 0 01-2.122 2.12l-7.5-7.5a1.5 1.5 0 010-2.12l7.5-7.5a1.5 1.5 0 012.122 2.12L8.12 10.5H19.5A1.5 1.5 0 0121 12z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="bpk-mobile-scroll-container"
      style="height: auto;"
    >
      <div
        class="bpk-mobile-scroll-container__scroller"
      >
        <div
          class="bpk-mobile-scroll-container__inner"
        >
          <fieldset
            class="bpk-chip-group bpk-chip-group--rail"
            role="radiogroup"
          >
            <legend
              class="visually-hidden"
            >
              Filter cities
            </legend>
            <button
              aria-checked="false"
              class="bpk-chip bpk-chip--default"
              role="radio"
              title="London"
              type="button"
            >
              <span
                class="bpk-text bpk-text--footnote"
              >
                London
              </span>
            </button>
            <button
              aria-checked="false"
              class="bpk-chip bpk-chip--default"
              role="radio"
              title="Berlin"
              type="button"
            >
              <span
                class="bpk-text bpk-text--footnote"
              >
                Berlin
              </span>
            </button>
            <button
              aria-checked="false"
              class="bpk-chip bpk-chip--default"
              role="radio"
              title="Florence"
              type="button"
            >
              <span
                class="bpk-text bpk-text--footnote"
              >
                Florence
              </span>
            </button>
            <button
              aria-checked="false"
              class="bpk-chip bpk-chip--default"
              role="radio"
              title="Stockholm"
              type="button"
            >
              <span
                class="bpk-text bpk-text--footnote"
              >
                Stockholm
              </span>
            </button>
          </fieldset>
        </div>
      </div>
    </div>
    <div
      class="bpk-chip-group-nudger bpk-chip-group-nudger--trailing bpk-chip-group-nudger--hidden"
    >
      <button
        class="bpk-button bpk-button--icon-only bpk-button--secondary"
        disabled=""
        title="Scroll forward"
        type="button"
      >
        <span
          style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
        >
          <svg
            aria-hidden="true"
            style="width: 1rem; height: 1rem;"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M3 12a1.5 1.5 0 001.5 1.5h11.379l-4.94 4.94a1.5 1.5 0 002.122 2.12l7.5-7.5a1.5 1.5 0 000-2.12l-7.5-7.5a1.5 1.5 0 00-2.122 2.12l4.94 4.94H4.5A1.5 1.5 0 003 12z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BpkChipGroupSingleSelect should render correctly with type = wrap 1`] = `
<DocumentFragment>
  <div
    class="bpk-chip-group-container"
  >
    <fieldset
      class="bpk-chip-group bpk-chip-group--wrap"
      role="radiogroup"
    >
      <legend
        class="visually-hidden"
      >
        Filter cities
      </legend>
      <button
        aria-checked="false"
        class="bpk-chip bpk-chip--default"
        role="radio"
        title="London"
        type="button"
      >
        <span
          class="bpk-text bpk-text--footnote"
        >
          London
        </span>
      </button>
      <button
        aria-checked="false"
        class="bpk-chip bpk-chip--default"
        role="radio"
        title="Berlin"
        type="button"
      >
        <span
          class="bpk-text bpk-text--footnote"
        >
          Berlin
        </span>
      </button>
      <button
        aria-checked="false"
        class="bpk-chip bpk-chip--default"
        role="radio"
        title="Florence"
        type="button"
      >
        <span
          class="bpk-text bpk-text--footnote"
        >
          Florence
        </span>
      </button>
      <button
        aria-checked="false"
        class="bpk-chip bpk-chip--default"
        role="radio"
        title="Stockholm"
        type="button"
      >
        <span
          class="bpk-text bpk-text--footnote"
        >
          Stockholm
        </span>
      </button>
    </fieldset>
  </div>
</DocumentFragment>
`;
